plugins {
    id 'java'
    id 'idea'
    id 'org.springframework.boot' version '3.5.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.madwind'
version = '1.0.8'

bootJar {
    archiveBaseName = 'dlproxy'
}
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}
idea {
    module {
        downloadJavadoc = true
        downloadSources = true
    }
}
repositories {
    mavenCentral()
}
ext {
    set('springModulithVersion', "1.4.1")
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.modulith:spring-modulith-starter-core'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'org.springframework.modulith:spring-modulith-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.modulith:spring-modulith-bom:${springModulithVersion}"
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.register('printVersion') {
    doLast {
        println project.version
    }
}
tasks.register('printJavaVersion') {
    doLast {
        println java.toolchain.languageVersion.get()
    }
}